feat: 1. swagger implementation 2. code cleanup
